bugfix (wrong font) for header

--- a/beyond-the-wall.css
+++ b/beyond-the-wall.css
@@ -49,7 +49,7 @@
 /* -- HEADER -------------------- */
 @font-face {
   font-family: "Header";
-  src: url("./fonts/KingthingsExeter.ttf");
+  src: url("./fonts/KingthingsPetrock.ttf");
 }
 
 /* --  SERIF  -------------------- */
